--- a/homework/3-16/3-16.tex
+++ b/homework/3-16/3-16.tex
@@ -201,6 +201,7 @@
   By P\'{o}lya's enumeration theorem, the number of equivalence classes is
   $$ (2^8 + 3\times 2^6 + 2\times 2^4)/6 = 80. $$
   When there are four input variables and they can be permuted by any permutation in $S_4$, the permutations of input combinations can be classified as
+
   \begin{table}[h]
     \centering
     \begin{tabular}{cc}
@@ -214,9 +215,10 @@
       \hline
     \end{tabular}
   \end{table}
+  
   By P\'{o}lya's enumeration theorem, the number of equivalence classes is
   $$ (2^{16} + 6\times 2^{12} + 3\times 2^{10} + 8\times 2^8 + 6 \times 2^6)/24 = 3984. $$
-  
+
   \section{[TJ] Problem 14.19}
-  Since the bands of a necktie have no symmetry, there are $4^12$ different-colored neckties.
+  Since the bands of a necktie have no symmetry, there are $4^{12}$ different-colored neckties.
 \end{document}
