--- a/homework/3-6/3-6.tex
+++ b/homework/3-6/3-6.tex
@@ -50,13 +50,13 @@
       \node [empty, label={below:$w4$}] (w4) at (4, 0){};
       \node [empty, label={below:$w5$}] (w5) at (5, 0){};
       \node [empty, label={below:$w6$}] (w6) at (6, 0){};
-      \draw (u0) -- (w2); \draw (u0) -- (w3); \draw (u0) -- (w4); \draw (u0) -- (w5); \draw (u0) -- (w6);
+      \draw (u0) -- (w1); \draw (u0) -- (w3); \draw (u0) -- (w6);
       \draw (u1) -- (w1);
       \draw (u2) -- (w0);
       \draw (u3) -- (w5);
       \draw (u4) -- (w2); \draw (u4) -- (w4); \draw (u4) -- (w6);
       \draw (u5) -- (w4);
-      \draw (u6) -- (w6);
+      \draw (u6) -- (w3);
     \end{tikzpicture}
     \end{center} \par
     \normalsize
